--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 	     		     	 <input type="text"="form-control" placeholder="Enter Book Title"id="searchInput">
 	     		     </section>
 	     		     <section class="col-sm-2">
-	     		     	<button class="btn btn-info" type="button">Search!</button>
+	     		     	<button class="btn btn-info" type="button" id="searchButton">Search!</button>
 	     		     </section>
 	     		     <section class="col-sm-2">
 	     		     	<button class="btn btn-success" href="#myModal" data-toggle="modal" type="button" id="newRecord">Create New Record</button>
@@ -106,14 +106,79 @@
 			</div><!-- end modal-body -->
 			
 			<div class="modal-footer">
-				<button class="btn btn-default" data-dismiss="modal" type="button">Close</button> <button class="btn btn-primary" type="button" id="add">Add</button>
+				<button class="btn btn-default" data-dismiss="modal" type="button">Close</button> <button class="btn btn-primary" type="button" id="add" data-dismiss="modal">Add</button>
+			</div><!-- end modal-footer -->
+		</div><!-- end modal-content -->
+	</div><!-- end modal-dialog -->
+</div><!-- end myModal -->
+
+
+<div class="modal fade" id="myModal2">
+	   <div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Update Record</h4>
+			</div><!-- end modal-header -->
+			<div class="modal-body">
+				<form class="form-horizontal">
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputId">BookId</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputId" placeholder="BookId" type="text">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputBookName">BookName</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputBookName" placeholder="Book Name" type="text">
+						</div>
+					</div>
+					
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputPrice">Price</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputPrice" placeholder="Price" type="text">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputAuthor">Author</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputAuthor" placeholder="Author" type="text">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputEmail">Email</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputEmail" placeholder="Email" type="email">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputPhone">Phone</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputPhone" placeholder="Phone" type="text">
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-lg-2 control-label" for="inputPublished">Published</label>
+						<div class="col-lg-10">
+							<input class="form-control" id="inputPublished" placeholder="Published" type="text">
+						</div>
+					</div>
+				</form>
+			</div><!-- end modal-body -->
+			
+			<div class="modal-footer">
+				<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+				 <button class="btn btn-primary" type="button" id="update" data-dismiss="modal">Update</button>
 			</div><!-- end modal-footer -->
 		</div><!-- end modal-content -->
 	</div><!-- end modal-dialog -->
 </div><!-- end myModal -->
 	    </div> 	<!-- end container -->
 	    <div class="container-fluid"> 	
-	     	<div id="slide">
+	     	<div id="display">
+	     	 <form action="#" class="navbar-form">
 	     		<table class="table table-striped" id="info">
 	     		 <tr>
 	     		 <th>Bookid</th>
@@ -126,6 +191,13 @@
 	     		 <th>CRUD</th>
 	     		 </tr>
 	     		</table>
+	     		</form>	
+
+	     		<form action="#" class="navbar-form">
+	     		<table class="table table-striped" id="searchTable">
+	     		 
+	     		</table>
+	     		</form>	
 	     	</div>
 		</div> <!-- end container -->
 		 <!-- Bootstrap JS -->
