Crud Using Angular

--- a/public/index.html
+++ b/public/index.html
@@ -226,26 +226,16 @@
                     
                 </table>
             </form>
+            <br>
+            <button id="prev">Prev</button>
+            <button id="next">Next</button>
             <form action="#" class="navbar-form">
                 <table class="table table-striped" id="searchTable">
                     <!-- This field will be populated by Jquery -->
                 </table>
             </form>
         </div>
-        <nav>
-            <ul class="pager">
-                <li>
-                    <a href="#id1">
-                        <button>Previous</button>
-                    </a>
-                </li>
-                <li>
-                    <a href="#id2">
-                        <button>Next</button>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        
     </div>
     <!-- end container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
